--- a/kube-prometheus-stack/jenkins/Jenkinsfile
+++ b/kube-prometheus-stack/jenkins/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
             echo "Deploying ${PLATFORM_TOOL} chart to Namespace ${NAMESPACE} in the cluster ${CLUSTER}"
              withAWS(credentials: 'aws-dev', region: 'us-west-2') {
                 sh "aws eks update-kubeconfig --name observability"
-                sh "helm upgrade --install ${PLATFORM_TOOL} ${WORKSPACE}/${PLATFORM_TOOL} -n ${NAMESPACE} "
+                sh "helm upgrade --install ${PLATFORM_TOOL} ${WORKSPACE}/${PLATFORM_TOOL} -n ${NAMESPACE} --dry-run"
               }    
            }
          }
